--- a/package.json
+++ b/package.json
@@ -3,35 +3,62 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@testing-library/jest-dom": "^5.16.2",
-    "@testing-library/react": "^12.1.3",
-    "@testing-library/user-event": "^13.5.0",
-    "@types/jest": "^27.4.0",
-    "@types/node": "^17.0.18",
-    "@types/react": "^17.0.39",
-    "@types/react-dom": "^17.0.11",
-    "axios": "^0.26.0",
-    "json-server": "^0.17.0",
+    "@testing-library/jest-dom": "^5.11.4",
+    "@testing-library/react": "^11.1.0",
+    "@testing-library/user-event": "^12.1.10",
+    "node-sass": "^6.0.1",
+    "postcss": "^8.3.6",
     "react": "^17.0.2",
-    "react-bootstrap": "^2.1.2",
     "react-dom": "^17.0.2",
+    "react-scripts": "4.0.3",
     "react-router": "^6.2.1",
     "react-router-dom": "^6.2.1",
-    "react-scripts": "^3.0.1",
-    "typescript": "^4.5.5",
-    "web-vitals": "^2.1.4"
+    "web-vitals": "^1.0.1",
+    "axios": "^0.26.1"
   },
   "scripts": {
-    "start": "start npm run start-watch && start react-scripts start",
+    "start": "start npm run start-watch && react-scripts start",
+    "start-watch": "json-server --watch db/db.json --port 3002",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "start-watch": "json-server --watch db/db.json --port 3002"
+    "webpack": "webpack",
+    "webpack-dev-server": "webpack-dev-server",
+    "dev": "npm run webpack-dev-server -- --env mode=development",
+    "prod": "npm run webpack -- --env mode=production"    
+  },
+  "devDependencies": {    
+    "@babel/core": "^7.15.0",
+    "@babel/preset-env": "^7.15.0",
+    "@babel/preset-react": "^7.14.5",
+    "babel-loader": "^8.2.2",
+    "babel-plugin-transform-class-properties": "^6.24.1",
+    "babel-plugin-transform-es2015-modules-commonjs": "^6.26.2",
+    "json-server": "^0.17.0",
+    "css-loader": "^6.2.0",
+    "file-loader": "^6.2.0",
+    "html-webpack-plugin": "^5.3.2",
+    "mini-css-extract-plugin": "^2.2.0",
+    "optimize-css-assets-webpack-plugin": "^6.0.1",
+    "react-hot-loader": "^4.13.0",
+    "react-loadable": "^5.5.0",
+    "sass-loader": "^12.1.0",
+    "style-loader": "^3.2.1",
+    "uglifyjs-webpack-plugin": "^2.2.0",
+    "url-loader": "^4.1.1",    
+    "webpack": "^5.73.0",
+    "webpack-cli": "^4.10.0",
+    "webpack-stream": "^6.1.2",
+    "webpack-dev-server": "^4.0.0",
+    "webpack-merge": "^5.8.0"
   },
   "eslintConfig": {
     "extends": [
       "react-app",
       "react-app/jest"
     ]
+  },
+  "overrides": {
+    "graceful-fs": "^4.2.9"
   },
   "browserslist": {
     "production": [
