login screen, validation, and api

--- a/.env
+++ b/.env
@@ -1,1 +1,7 @@
 SKIP_PREFLIGHT_CHECK=true
+
+//Google client id
+GOOGLE_CLIENT_ID=329305881379-jpdjockh9e2bb3l1b64ef2mtv5mro2a4.apps.googleusercontent.com
+
+//Url to connect in json server
+LOCAL_DB_URL='http://localhost:3002/'
