--- a/package.json
+++ b/package.json
@@ -7,7 +7,6 @@
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
     "axios": "^0.26.1",
-    "node-sass": "^6.0.1",
     "postcss": "^8.3.6",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
@@ -24,8 +23,8 @@
     "test": "react-scripts test",
     "webpack": "webpack",
     "webpack-dev-server": "webpack-dev-server",
-    "dev": "npm run webpack-dev-server -- --env mode=development",
-    "prod": "npm run webpack -- --env mode=production"
+    "dev": "start npm run webpack-dev-server -- --env mode=development",
+    "prod": "start npm run webpack -- --env mode=production"
   },
   "devDependencies": {
     "@babel/core": "^7.15.0",
@@ -34,18 +33,24 @@
     "babel-loader": "^8.2.2",
     "babel-plugin-transform-class-properties": "^6.24.1",
     "babel-plugin-transform-es2015-modules-commonjs": "^6.26.2",
-    "css-loader": "^6.2.0",
+    "bootstrap": "^5.1.3",
+    "css-loader": "^6.7.1",
+    "dotenv-webpack": "^7.1.0",
     "file-loader": "^6.2.0",
     "html-webpack-plugin": "^5.3.2",
     "json-server": "^0.17.0",
     "mini-css-extract-plugin": "^2.2.0",
+    "node-sass": "^6.0.1",
     "optimize-css-assets-webpack-plugin": "^6.0.1",
     "react-hot-loader": "^4.13.0",
     "react-loadable": "^5.5.0",
-    "sass-loader": "^12.1.0",
-    "style-loader": "^3.2.1",
+    "react-use-googlelogin": "^0.12.5",
+    "react-validation": "^3.0.7",
+    "sass-loader": "^12.6.0",
+    "style-loader": "^3.3.1",
     "uglifyjs-webpack-plugin": "^2.2.0",
     "url-loader": "^4.1.1",
+    "validator": "^13.7.0",
     "webpack": "^5.73.0",
     "webpack-cli": "^4.10.0",
     "webpack-dev-server": "^4.0.0",
