--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "react-loadable": "^5.5.0",
     "react-use-googlelogin": "^0.12.5",
     "react-validation": "^3.0.7",
+    "sass": "^1.53.0",
     "sass-loader": "^12.6.0",
     "style-loader": "^3.3.1",
     "uglifyjs-webpack-plugin": "^2.2.0",
