--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "web-vitals": "^1.0.1"
   },
   "scripts": {
-    "start": "start npm run start-watch && start yarn dev",
+    "start": "start npm run start-watch && yarn dev",
     "start-prod": "start npm run start-watch && start yarn prod",
     "start-watch": "json-server --watch db/db.json --port 3002",
     "build": "react-scripts build",
