--- a/package.json
+++ b/package.json
@@ -12,18 +12,18 @@
     "react-dom": "^17.0.2",
     "react-router": "^6.2.1",
     "react-router-dom": "^6.2.1",
-    "react-scripts": "4.0.3",
+    "react-scripts": "^4.0.3",
     "web-vitals": "^1.0.1"
   },
   "scripts": {
     "start": "start npm run start-watch && yarn dev",
-    "start-prod": "start npm run start-watch && start yarn prod",
+    "start-prod": "start npm run start-watch && yarn prod",
     "start-watch": "json-server --watch db/db.json --port 3002",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "webpack": "webpack",
     "webpack-dev-server": "webpack-dev-server",
-    "dev": "start npm run webpack-dev-server -- --env mode=development",
+    "dev": "npm run webpack-dev-server -- --env mode=development",
     "prod": "start npm run webpack -- --env mode=production"
   },
   "devDependencies": {
