--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
     "test": "react-scripts test",
     "webpack": "webpack",
     "webpack-dev-server": "webpack-dev-server",
-    "dev": "npm run webpack-dev-server -- --env mode=development",
+    "dev": "start npm run webpack-dev-server -- --env mode=development",
     "prod": "start npm run webpack -- --env mode=production"
   },
   "devDependencies": {
@@ -40,14 +40,14 @@
     "html-webpack-plugin": "^5.3.2",
     "json-server": "^0.17.0",
     "mini-css-extract-plugin": "^2.2.0",
-    "node-sass": "^6.0.1",
+    "node-sass": "^7.0.1",
     "optimize-css-assets-webpack-plugin": "^6.0.1",
     "react-hot-loader": "^4.13.0",
     "react-loadable": "^5.5.0",
     "react-use-googlelogin": "^0.12.5",
     "react-validation": "^3.0.7",
     "sass": "^1.53.0",
-    "sass-loader": "^12.6.0",
+    "sass-loader": "^13.0.2",
     "style-loader": "^3.3.1",
     "uglifyjs-webpack-plugin": "^2.2.0",
     "url-loader": "^4.1.1",
